# google-data-engineer

./: LICENSE  README.md
.github/workflows/: ch08_java.yml  ch09_jobs.yml
Ch02/: README.md
Ch02/google_app_engine/: .dockerignore  Dockerfile  ingest_flights.py  requirements.txt
Ch04/java/dataflowrunner/: pom.xml
Ch04/python/: Dockerfile  README.md  requirements.txt  self-df02.py  self-df03.py  self-df04.py  self-df05.py  simulate.py
Ch05/: FEDERATEDQUERY.md  README.md  getting_started_with_eda.ipynb  simevents.json
Ch05/.ipynb_checkpoints/: HelloWorld!-checkpoint.ipynb
Ch06/: quantization.ipynb
Ch06/dataproc/: PIG_COMMANDS.md  bayes-final.pig  bayes.pig  bayes1.pig  bayes2.pig  bayes3.pig  bayes4.pig  env.sh  init_cluster.sh  run_pig_script.sh  start_chrome.sh  update_cluster.sh
Ch07/: logistic.ipynb
Ch08/: README.md  pom.xml
Ch09/: .dockerignore  .mypy.ini  .pylintrc  Dockerfile  Makefile  README.md  config.yaml  create_job.sh  hyperparameter.yaml  pyproject.toml  requirements.txt
Ch09/scripts/: get_online_prediction.py
Ch09/tests/: test_hello_world.py
Ch09/trainer/: model.py  task.py
Ch10/: README.md  pom.xml
Ch2_Ingesting_Data_into_the_Cloud/: ingest.py
Data_Science_on_the_Google_Cloud_Platform/Ch02/: README
Data_Science_on_the_Google_Cloud_Platform/Ch03/: cloud-sql-model.sh  create_table.sql
Data_Science_on_the_Google_Cloud_Platform/Ch3/: README  copy-flight-data.sh
Data_Science_on_the_Google_Cloud_Platform/Ch4/: README  batch-01.py  self-df02.py
Data_Science_on_the_Google_Cloud_Platform/Ch5/: HelloWorld!.ipynb
(+97 files in other folders)
