[tool.poetry]
name = "trainer"
version = "0.1.0"
description = ""
authors = ["ywatanabe <yu.w.tennis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[tool.poetry.group.dev.dependencies]
tensorflow = "~2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
