[tool.poetry]
name = "trainer"
version = "0.1.0"
description = ""
authors = ["ywatanabe <yu.w.tennis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

[tool.poetry.group.dev.dependencies]
tensorflow = "~2.14.0"
cloudml-hypertune = "~0.1.0.dev6"
pylint = "~3.3.0"
mypy = "~1.13.0"
google-cloud-aiplatform = "~1.73.0"
google-auth = "~2.36.0"
grpcio = "~1.63.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
